<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EOBR</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">Home</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_stop_trip">Stop Trip</string>
    <string name="action_view_trip">View Trip</string>
    <string name="action_new_trip">New Trip</string>
    <string name="action_back_to_status">To Status</string>

    <!-- New Trip -->
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>

    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>

    <string name="trip_type">Trip Type</string>
    <string name="pickup_empty">Picked Up Empty</string>
    <string name="pickup_full">Picked Up Full</string>
    <string name="deliver_empty">Delivered Empty</string>
    <string name="deliver_full">Delivered Full</string>

    <!-- Status -->
    <string name="status">Status</string>

    <string name="note">Record Note</string>
    <!--<string name="o">Waiting at the gate</string>-->
    <!--<string name="od_2">Terminal gate closed</string>-->
    <string name="od_3">Filling out paperwork</string>

    <string name="terminal">Terminal</string>
    <string name="gate_in">Gate In</string>
    <string name="hook_unhook">Hook/Unhook</string>
    <string name="gate_out">Gate Out</string>

    <string name="warehouse">Warehouse</string>
    <string name="waiting_for_dock">Waiting For Dock</string>
    <string name="dock_in">Dock In</string>
    <string name="dock_out">Dock Out</string>

    <string name="container_status">Container Status</string>
    <string name="not_available">Not Available</string>
    <string name="available">Available</string>
    <string name="pickup">Picked Up</string>
    <string name="deliver">Delivered</string>

</resources>
