<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.26"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:text="@string/status"
            android:id="@+id/status_text_view"
            android:textSize="22sp"
            />
        <TextView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/status_text_view"
            android:background="@drawable/stroke_bg" >
        </TextView>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/terminal_layer"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scroll_view"
            android:orientation="vertical"
            android:background="@drawable/stroke_bg"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/origin_text_view"
                android:text="@string/terminal"
                android:gravity="center"
                android:textSize="36sp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:textSize="24sp"
                android:text="@string/gate_in"
                android:id="@+id/gate_in"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:text="@string/hook_unhook"
                android:id="@+id/hook_unhook"/>
            <!--<Button-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="85dp"-->
                <!--android:layout_marginTop="18dp"-->
                <!--android:textSize="24sp"-->
                <!--android:text="@string/"-->
                <!--android:id="@+id/origin_terminal_gate_closed"-->
                <!--/>-->
            <!--<Button-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="85dp"-->
                <!--android:layout_marginTop="18dp"-->
                <!--android:textSize="24sp"-->
                <!--android:text="@string/od_3"-->
                <!--android:id="@+id/origin_filling_out_paperwork"-->
                <!--/>-->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/warehouse_layer"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"

            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:background="@drawable/stroke_bg">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/warehouse"
                android:text="@string/warehouse"
                android:gravity="center"
                android:textSize="36sp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:textSize="24sp"
                android:text="@string/waiting_for_dock"
                android:id="@+id/waiting_for_dock"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                android:text="@string/dock_in"
                android:id="@+id/dock_in"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                android:text="@string/dock_out"
                android:id="@+id/dock_out"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_status_layer"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:background="@drawable/stroke_bg">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/container_status_textview"
                android:text="@string/container_status"
                android:gravity="center"
                android:textSize="36sp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:textSize="24sp"
                android:text="@string/available"
                android:id="@+id/available"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                android:text="@string/not_available"
                android:id="@+id/not_available"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                android:text="@string/pickup"
                android:id="@+id/pickup"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                android:text="@string/deliver"
                android:id="@+id/deliver"/>
        </LinearLayout>
    </LinearLayout>
    <Button 
        android:layout_width="144dp"
        android:layout_height="85dp"
        android:text="@string/note"
        android:textSize="24sp"
        android:id="@+id/note"
         android:layout_below="@+id/origin_layer"
         android:layout_alignLeft="@+id/origin_layer"/>
</LinearLayout>
